--- a/public/bower.json
+++ b/public/bower.json
@@ -11,6 +11,7 @@
     "angular": "1.2.x",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
-    "restangular": "1.3.x"
+    "restangular": "1.3.x",
+    "lodash": "~3.10.0"
   }
 }
