--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,5 +1,5 @@
 development:
-  sessions:
+  clients:
     default:
       # A session can have any number of hosts. Usually 1 for a single
       # server setup, and at least 3 for a replica set. Hosts must be
