--- a/public/bower.json
+++ b/public/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Traductor",
+  "name": "traductor",
   "description": "Traductor project",
   "version": "0.0.0",
   "license": "MIT",
@@ -10,6 +10,7 @@
     "angular": "1.4.x",
     "angular-route": "1.4.x",
     "angular-loader": "1.4.x",
+    "angular-cookies": "1.4.x",
     "angular-ui-router": "0.2.x",
     "restangular": "1.3.x",
     "lodash": "~3.10.0"
